adding forward slash to phone num
adding forward slash to phone num

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                             <div class="social-links">
                                 <a href="https://www.linkedin.com/in/md-rafi-dudekula-6b2924188" target="_blank"><i class="fab fa-linkedin"></i></a>
                                 <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                                <a href="https://wa.me/919553503540" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                                <a href="https://wa.me/919553503540/" target="_blank"><i class="fab fa-whatsapp"></i></a>
                             </div>
                         </div>
                     </div>
